# LaTeXify

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  GEMINI.md  MIGRATION.md  Makefile  PROJECT_MAP.json  PROJECT_MAP.md  README.md  REPO_DOCUMENTATION.md  TODO.md  TO_IMPROVE.md  current_goals.ini  debug_docling.py  debug_docling_fields.py  debug_docling_format.py  debug_docling_init.py  debug_llm_output.txt  debug_llm_refine_fix.txt  debug_llm_refine_initial.txt  debug_output.txt  debug_pdf.py  debug_regex.py  debug_run.sh  docker-compose.yml  mkdocs.yml  models  mypy.ini  output.tex  package-lock.json  plan.json  pyproject.toml  python_version.txt  refactor.sh  run_latexify.py  run_release.py  test_output.txt  test_regex.py  (+3 more)
LaTeXify-root/: ..gitignore.kate-swp  .env.example  .env.local  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  HOW_TO_INSTALL.md  HOW_TO_RUN.md  README.md  README.txt  inputs  main.py  plan.json  pyproject.toml  requirements.txt  run_local.py  to_do.md
LaTeXify-root/.github/workflows/: ci.yml
LaTeXify-root/.venv-cu126/: pyvenv.cfg
LaTeXify-root/.venv-faiss311/: pyvenv.cfg
LaTeXify-root/bundles/: PREAMBLE.bundle.json  Q1.bundle.json  TITLE.bundle.json
LaTeXify-root/configs/: router.yaml
LaTeXify-root/configs/ingestion/: internvl.yaml
LaTeXify-root/data/: latex_docs.jsonl
LaTeXify-root/dev/: .gitignore  .part  README.dev.md  requirements-ocr.txt
LaTeXify-root/dev/chunking/: page_aware_chunker.py  page_aware_chunker.py.bak
LaTeXify-root/dev/env/: sanity.sh
LaTeXify-root/dev/eval/: README.md  consensus.py  metrics.py  pdf_reference.py
LaTeXify-root/dev/ocr_backends/: .gitignore  base.py  dots_ocr.py  io_utils.py  nanonets_ocr2.py  nanonets_ocr2_3b.py  nanonets_ocr_s.py  nanonets_s.py  ocr_page.py  paddle_ocr.py  ppocrv5_det.py  prompts.py  qwen2vl_ocr2b.py  sanitize.py
LaTeXify-root/dev/runs/: README.runs.md
LaTeXify-root/dev/tools/: render_pdf_pages.py
LaTeXify-root/dev/utils/: pdf_to_images.py
LaTeXify-root/docs/: DEV_NOTES.md  HF_RUNNER.md  SCHEMAS.md
LaTeXify-root/docs/tasks/: build_latex_kb.md  classes.md  compile_loop.md  install_lix.md  phase2_planner.md  retrieval_agent.md  router.md  run_task.md  seed_latex_kb_min.jsonl
LaTeXify-root/evidence/: T03.json  T03.orchestrate.jsonl  aggregate.log.jsonl  bundle_T03.json
LaTeXify-root/kb/latex/: build_latex_kb.log.jsonl  chunks.jsonl  faiss.index  faiss.meta.json  latex_docs.index  latex_docs.jsonl  latex_docs.meta.json
LaTeXify-root/latexify/: __init__.py  cli.py
LaTeXify-root/latexify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
LaTeXify-root/latexify/agents/: __init__.py  class_probe.py
LaTeXify-root/latexify/assembly/: utils.py
LaTeXify-root/latexify/ingestion/: __init__.py  chunkers.py  ingest_pdf.py  internvl_hf_adapter.py  orchestrator.py
LaTeXify-root/latexify/kb/: __init__.py  build_index_bgem3.py  build_index_compat.py  build_latex_kb.py  ensure_kb_alias.py  query_index.py
LaTeXify-root/latexify/models/: __init__.py  schemas.py
LaTeXify-root/latexify/pipeline/: __init__.py  aggregator.py  critic_agent.py  judge_model.py  langchain_orchestrator.py  layout_planner.py  model_backends.py  model_router.py  phase2_run_task.py  planner_scaffold.py  qa_validator.py  retrieval_bundle.py  specialist_router.py  synth_figure.py  synth_figure_placeholder.py  synth_latex.py  synth_shared.py  synth_table.py  synth_text.py  tex_assembler.py
LaTeXify-root/latexify/utils/: docclass_map.py  logging.py  paths.py  setup_classes.py
LaTeXify-root/models/nanonets-ocr-s/: Modelfile  README.md  chat_template.jinja  config.json  generation_config.json  model-00001-of-00002.safetensors  model-00002-of-00002.safetensors  model.safetensors.index.json  tokenizer_config.json  video_preprocessor_config.json
LaTeXify-root/models/nanonets-ocr2-3b/: README.md  added_tokens.json  config.json  generation_config.json  model-00001-of-00002.safetensors  model-00002-of-00002.safetensors  model.safetensors.index.json  preprocessor_config.json  (+1 more)
LaTeXify-root/scripts/: aggregate_tex.py  aggregator.py  approve_fixes.py  auto_fix.py  block_consensus.py  build_chunks.py  build_faiss_from_ocr.py  build_index.py  build_index_bgem3.py  build_index_compat.py  build_latex_kb.py  check_indexes.py  choose_doc_class.py  chunk_from_blocks.py  chunk_strategies.py  chunks_from_blocks_v2.py  class_probe.py  class_selector.py  clean_build.py  clean_strays.py  compile_loop.py  consensus.py  dcl_paths.py  dcl_tools.py  docclass_map.py  ensure_kb_alias.py  env_bootstrap.py  evaluate_run.py  fix_merge_conflicts.py  fix_snippets.py  gate1_2.sh  gate5_planner_smoke.py  gate6_preamble.py  ingest_files.py  ingest_pdf.py  install_models.py  jsonl_filter.py  judge_council.py  kb_paths.py  latex_deps_check.py  (+50 more)
LaTeXify-root/snippets/: T03.tex
LaTeXify-root/tasks/: aggregator.md  build_latex_kb.md  classes_setup.md  install_lix.md  phase2_planner.md  prompt-tests.md  retrieval_agent.md  router.md  seed_latex_kb_min.jsonl  synthesis_agent.md
LaTeXify-root/tests/: conftest.py  test_aggregator.py  test_aggregator_fallback.py  test_aggregator_logging.py  test_aggregator_logging_collision.py  test_aggregator_missing_plan.py  test_aggregator_prune.py  test_auto_fix.py  test_build_index_compat.py  test_build_latex_kb.py  test_choose_doc_class.py  test_chunkers.py  test_class_probe.py  test_class_probe_smoke.py  test_compile_loop.py  test_critic_agent.py  test_docclass_fallback.py  test_docclass_map.py  test_e2e_smoke.py  test_engine_select.py  test_ingestion_council.py  test_ingestion_merge.py  test_internvl_hf_adapter.py  test_judge_model.py  test_kb_alias.py  test_langchain_orchestrator.py  test_latex_deps_check.py  test_layout_planner.py  test_lix_fixup.py  test_phase2_run_task.py  test_planner_scaffold.py  test_qa_validator.py  test_query_bundle.py  test_query_context_bundle.py  test_regen_chunks_symlink.py  test_retrieval_bundle.py  test_retrieval_bundle_fallback.py  test_setup_classes.py  test_setup_classes_env.py  test_specialist_router.py  (+4 more)
(+915 files in other folders)
