[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latexify"
version = "1.0.0"
description = "State-of-the-Art Python-to-LaTeX Transpiler (DeepEvolve SOTA v1.0)"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "LaTeXify Team", email = "dev@latexify.org"},
]
keywords = ["latex", "python", "transpiler", "ast", "math", "compiler"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    # Minimal dependencies for core transpiler
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
pdf = [
    # Legacy Pipeline Dependencies
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.23.0",
    "starlette>=0.37.0",
    "pydantic>=2.6.0",
    "streamlit>=1.36.0",
    "requests>=2.31.0",
    "fastjsonschema>=2.19.0",
    "langchain-core>=0.1.39",
    "langgraph>=0.0.46",
    "jinja2>=3.1.0",
    "datasets>=4.4.0",
    "pyarrow>=22.0.0",
    "pandas>=2.3.0",
    "loguru>=0.7.0",
    "tenacity>=8.2.0",
    "dspy-ai>=2.0.0",
    "ultralytics>=8.2.0",
    "pymupdf>=1.24.0",
    "paddleocr>=2.7.0",
    "paddlepaddle-gpu>=2.6.0",
    "unimernet[full]>=0.1.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "arxiv>=2.1.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "nltk>=3.8.1",
    "jaxtyping>=0.2.28",
    "torchtyping>=0.1.4",
    "bitsandbytes>=0.41.0",
    "docling[vlm,tesserocr]>=1.0.0",
    "nougat-ocr>=0.1.17",
    "pix2tex>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/latexify/latexify"
Issues = "https://github.com/latexify/latexify/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/latexify"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pytest>=8.2.0",
]

[tool.ruff]
line-length = 120
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true 

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests", "src/latexify/tests"]
