[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latexify"
version = "1.0.0"
description = "State-of-the-Art Python-to-LaTeX Transpiler (DeepEvolve SOTA v1.0)"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "LaTeXify Team", email = "dev@latexify.org"},
]
keywords = ["latex", "python", "transpiler", "ast", "math", "compiler"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    # Core runtime dependencies (library + pipeline)
    "typing-extensions>=4.0.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.0.0",
    "requests>=2.32.0",
    "PyMuPDF>=1.24.0",
    "pypdf>=3.9.0",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=4.46.0",
    "datasets>=2.19.0",
    "accelerate>=0.33.0",
    "sentencepiece>=0.1.99",
    "huggingface-hub>=0.25.0",
    "einops>=0.7.0",
    "timm>=1.0.0",
    "duckduckgo-search>=5.3.0",
    "sympy>=1.12",
    "latex2sympy2>=1.0.1",
    "jinja2>=3.1.0",
    "texoutparse>=0.4.0",
    "protobuf>=4.24.0",
    "surya-ocr>=0.3.0",
    "matplotlib>=3.8.0",
    "reportlab>=4.0.0",
    "diffusers>=0.29.0",
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.7.0",
    "ultralytics>=8.2.0",
    "opencv-python-headless>=4.9.0",
    "docling[vlm,tesserocr]>=1.0.0",
    "nougat-ocr>=0.1.17",
    "pix2tex>=0.1.0",
    "llama-cpp-python==0.2.79",
    "vllm==0.6.0",
]

[project.optional-dependencies]
pdf = [
    # API / UI / orchestration layer
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.23.0",
    "starlette>=0.37.0",
    "streamlit>=1.36.0",
    "fastjsonschema>=2.19.0",
    "langchain-core>=0.1.39",
    "langgraph>=0.0.46",
    "datasets>=4.4.0",
    "pyarrow>=22.0.0",
    "pandas>=2.3.0",
    "loguru>=0.7.0",
    "tenacity>=8.2.0",
    "dspy-ai>=2.0.0",
    "paddlepaddle-gpu>=2.6.0",
    "unimernet[full]>=0.1.0",
    "arxiv>=2.1.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "nltk>=3.8.1",
    "jaxtyping>=0.2.28",
    "torchtyping>=0.1.4",
    "bitsandbytes>=0.41.0",
]

[project.urls]
Homepage = "https://github.com/latexify/latexify"
Issues = "https://github.com/latexify/latexify/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/latexify"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pytest>=8.2.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 120
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "hydra.*",
  "omegaconf.*",
  "cv2.*",
  "fitz.*",
  "ultralytics.*",
  "paddleocr.*",
  "transformers.*",
  "nltk.*",
  "streamlit.*",
]
ignore_missing_imports = true 

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests", "src/latexify/tests"]
