[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "latexify"
version = "0.1.0"
description = "LaTeX document processing and synthesis toolkit"
readme = "README.txt"
authors = [{name = "LaTeXify Team"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = []

[project.scripts]
latexify-aggregate = "latexify.pipeline.aggregator:main"
latexify-planner = "latexify.pipeline.planner_scaffold:main"
latexify-retrieval-bundle = "latexify.pipeline.retrieval_bundle:main"
latexify-query-index = "latexify.kb.query_index:main"
latexify-build-latex-kb = "latexify.kb.build_latex_kb:main"
latexify-build-index-bgem3 = "latexify.kb.build_index_bgem3:main"
latexify-build-index-compat = "latexify.kb.build_index_compat:main"
latexify-ensure-kb-alias = "latexify.kb.ensure_kb_alias:main"
latexify-class-probe = "latexify.agents.class_probe:main"
latexify-synth-latex = "latexify.pipeline.synth_latex:main"
latexify-phase2-run-task = "latexify.pipeline.phase2_run_task:main"
latexify-setup-classes = "latexify.utils.setup_classes:main"
latexify-latex-deps-check = "latexify.utils.latex_deps_check:main"
latexify-ingest-pdf = "latexify.ingestion.ingest_pdf:main"

[tool.setuptools.packages.find]
include = ["latexify*"]

